--- a/src/app/bmi-calculator/bmi-calculator.component.html
+++ b/src/app/bmi-calculator/bmi-calculator.component.html
@@ -1,8 +1,10 @@
 <div class="bmi-calc-container">
-    <mat-card>Male</mat-card>
-    <mat-card>Female</mat-card>
-    <mat-card>Height</mat-card>
-    <mat-card>Weight</mat-card>
-    <mat-card>Age</mat-card>
-    <button mat-raised-button color="primary">Calculate</button>
+    <div class="bmi-calc-layout">
+        <mat-card class="cards bmi-male">Male</mat-card>
+        <mat-card class="cards bmi-female">Female</mat-card>
+        <mat-card class="cards bmi-height">Height</mat-card>
+        <mat-card class="cards bmi-weight">Weight</mat-card>
+        <mat-card class="cards bmi-age">Age</mat-card>
+        <button mat-raised-button color="primary" class="bmi-calc-btn">Calculate</button>
+    </div>
 </div>
