--- a/src/app/bmi-calculator/bmi-calculator.component.css
+++ b/src/app/bmi-calculator/bmi-calculator.component.css
@@ -86,9 +86,15 @@ input::-webkit-inner-spin-button {
     font-size: 4.5rem;
 }
 
-/* .bmi-height mat-form-field{
-    width: 5rem;
-} */
+.cards mat-form-field{
+    width: 6rem;
+    text-align: center;
+}
+
+.cards mat-form-field input{
+    font-weight: 400;
+    font-size: 4em;
+}
 
 .plus-minus-btn-container{
     width: 100%;
@@ -103,12 +109,14 @@ input::-webkit-inner-spin-button {
     width: 2.5rem;
     height: 2.5rem;
     font-size: 2.5rem;
+
+    user-select: none;
 }
 
-.card-value{
+/* .card-value{
     font-weight: 400;
     font-size: 4em;
-}
+} */
 
 
 @media only screen and (max-width: 770px){
