--- a/src/app/bmi-result/bmi-result.component.html
+++ b/src/app/bmi-result/bmi-result.component.html
@@ -1,4 +1,7 @@
-<div class="dialog-container">
-    <p>{{ data }}</p>
+<h2 mat-dialog-title>BMI Result</h2>
+<mat-dialog-content >
+    {{ data }}
+</mat-dialog-content>
+<mat-dialog-actions>
     <button mat-raised-button color="primary" mat-dialog-close>Cancel</button>
-</div>
+</mat-dialog-actions>
