--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.custom-modalbox mat-dialog-container{
+    background-color: #3c3c3c;
+    color: #fff;
+}
