--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,31 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .custom-modalbox mat-dialog-container{
+    width: 250px;
+    height: 500px;
     background-color: #3c3c3c;
-    color: #fff;
+    color: #fff;  
+}
+
+.custom-modalbox app-bmi-result{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+ 
+.custom-modalbox mat-dialog-content{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.custom-modalbox mat-dialog-actions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
