prompt user for update when available

--- a/src/app/bmi-calculator/bmi-calculator.component.html
+++ b/src/app/bmi-calculator/bmi-calculator.component.html
@@ -41,5 +41,8 @@
             </div>
         </mat-card>
         <button mat-raised-button color="primary" class="bmi-calc-btn" (click)="calculateBmi()">Calculate Your BMI</button>
+        <!-- <button (click)="installPwa()">
+            Install
+        </button> -->
     </div>
 </div>
